--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,14 @@
 server:
   port: 9094
 
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    hostname: localhost
-
 spring:
+  profiles:
+    active: local
   application:
     name: ORDER-SERVICE
 # configuration for mongoDB
   data:
     mongodb:
-      uri: mongodb://localhost:27017/orderdb
-      host: localhost
-      port: 27017
-      database: orderdb
       repository:
         enabled: true
   jpa:
